# pre-commit-pdb-vars

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pdb_vars.py  pyproject.toml
pdbvars/: main.py
test_files/: _fail._py
