[tool.poetry]
name = "pre-commit-pdb-vars"
version = "0.1.0"
description = "A pre-commit framework hook to prevent variable names matching pdb shortcuts."
authors = ["symonk <jackofspaces@gmail.com>"]

[tool.poetry.scripts]
pdb_vars = "pdb_vars:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
