[tool.poetry]
name = "pdbvars"
version = "0.1.0"
description = "A pre-commit framework hook to prevent variable names matching pdb shortcuts."
authors = ["symonk"]

[tool.poetry.scripts]
pdb_vars = "pdbvars.main:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
